# commit-gen

./: Cargo.toml  LICENSE  README.md
config/: default.toml
src/: config.rs  git.rs  main.rs  ollama.rs  utils.rs
