[package]
name = "commit-gen"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to generate commit messages using Ollama"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
ollama-rs = "0.1.6"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
git2 = { version = "0.20", features = ["vendored-openssl"] }
colored = "3"
config = "0.15"
dirs = "6.0"
chrono = "0.4"
regex = "1.11"
